tests/baselines/reference/for-of18.errors.txt
tests/cases/conformance/es6/for-ofStatements/for-of18.ts(14,11): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.


==== tests/cases/conformance/es6/for-ofStatements/for-of18.ts (1 errors) ====
    class StringIterator {
        next() {
            return {
                value: "",
                done: false
            };
        }
        [Symbol.iterator]() {
            return this;
        }
    }
    
    var v: string;
    for (v of new StringIterator) { } // Should succeed
              ~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.